# product-service/pkg/product-service/product-service.pb.validate.go
@@ -260,3 +260,310 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = CreateProductResponseValidationError{}
+
+// Validate checks the field values on DeleteProductRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *DeleteProductRequest) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	for idx, item := range m.GetProductIds() {
+		_, _ = idx, item
+
+		if item <= 0 {
+			return DeleteProductRequestValidationError{
+				field:  fmt.Sprintf("ProductIds[%v]", idx),
+				reason: "value must be greater than 0",
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// DeleteProductRequestValidationError is the validation error returned by
+// DeleteProductRequest.Validate if the designated constraints aren't met.
+type DeleteProductRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e DeleteProductRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e DeleteProductRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e DeleteProductRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e DeleteProductRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e DeleteProductRequestValidationError) ErrorName() string {
+	return "DeleteProductRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e DeleteProductRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sDeleteProductRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = DeleteProductRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = DeleteProductRequestValidationError{}
+
+// Validate checks the field values on DeleteProductResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *DeleteProductResponse) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	return nil
+}
+
+// DeleteProductResponseValidationError is the validation error returned by
+// DeleteProductResponse.Validate if the designated constraints aren't met.
+type DeleteProductResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e DeleteProductResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e DeleteProductResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e DeleteProductResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e DeleteProductResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e DeleteProductResponseValidationError) ErrorName() string {
+	return "DeleteProductResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e DeleteProductResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sDeleteProductResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = DeleteProductResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = DeleteProductResponseValidationError{}
+
+// Validate checks the field values on GetProductRequest with the rules defined
+// in the proto definition for this message. If any rules are violated, an
+// error is returned.
+func (m *GetProductRequest) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	for idx, item := range m.GetProductIds() {
+		_, _ = idx, item
+
+		if item <= 0 {
+			return GetProductRequestValidationError{
+				field:  fmt.Sprintf("ProductIds[%v]", idx),
+				reason: "value must be greater than 0",
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// GetProductRequestValidationError is the validation error returned by
+// GetProductRequest.Validate if the designated constraints aren't met.
+type GetProductRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetProductRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetProductRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetProductRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetProductRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetProductRequestValidationError) ErrorName() string {
+	return "GetProductRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetProductRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetProductRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetProductRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetProductRequestValidationError{}
+
+// Validate checks the field values on GetProductResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *GetProductResponse) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	for idx, item := range m.GetProducts() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GetProductResponseValidationError{
+					field:  fmt.Sprintf("Products[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// GetProductResponseValidationError is the validation error returned by
+// GetProductResponse.Validate if the designated constraints aren't met.
+type GetProductResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetProductResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetProductResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetProductResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetProductResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetProductResponseValidationError) ErrorName() string {
+	return "GetProductResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetProductResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetProductResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetProductResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetProductResponseValidationError{}
